[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/Abel-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/Start.gd" type="Script" id=2]
[ext_resource path="res://scenes/Difficulty Menu.gd" type="Script" id=3]
[ext_resource path="res://scenes/Menu Buttons.gd" type="Script" id=4]
[ext_resource path="res://scenes/Settings.gd" type="Script" id=5]
[ext_resource path="res://sprites/Verses Logo.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 75
font_data = ExtResource( 1 )

[node name="Game " type="Node2D"]

[node name="Background" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_left = 2.0
margin_right = 578.0
margin_bottom = 1024.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Background"]
position = Vector2( 277.069, 441.886 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )

[node name="Score" type="Node2D" parent="."]

[node name="Button" type="Node2D" parent="."]

[node name="UI" type="Node2D" parent="."]

[node name="Menu Buttons" type="Node2D" parent="UI"]
script = ExtResource( 4 )

[node name="Start" type="Node2D" parent="UI/Menu Buttons"]
script = ExtResource( 2 )

[node name="Start Menu" type="VBoxContainer" parent="UI/Menu Buttons/Start"]
margin_top = 600.0
margin_right = 576.0
margin_bottom = 935.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="UI/Menu Buttons/Start/Start Menu"]
modulate = Color( 0.636719, 0.636719, 0.636719, 1 )
margin_right = 576.0
margin_bottom = 103.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.709804, 0.698039, 0.698039, 1 )
enabled_focus_mode = 0
text = "Start"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="UI/Menu Buttons/Start/Start Menu"]
modulate = Color( 0.636719, 0.636719, 0.636719, 1 )
margin_top = 107.0
margin_right = 576.0
margin_bottom = 210.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.709804, 0.698039, 0.698039, 1 )
enabled_focus_mode = 0
text = "Settings"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="UI/Menu Buttons/Start/Start Menu"]
modulate = Color( 0.636719, 0.636719, 0.636719, 1 )
margin_top = 214.0
margin_right = 576.0
margin_bottom = 317.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.709804, 0.698039, 0.698039, 1 )
enabled_focus_mode = 0
text = "Exit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_tween" type="Tween" parent="UI/Menu Buttons/Start"]

[node name="Difficulty Menu" type="Node2D" parent="UI/Menu Buttons"]
position = Vector2( 576, 0 )
script = ExtResource( 3 )

[node name="move_tween" type="Tween" parent="UI/Menu Buttons/Difficulty Menu"]

[node name="Difficulty" type="VBoxContainer" parent="UI/Menu Buttons/Difficulty Menu"]
margin_top = 560.0
margin_right = 576.0
margin_bottom = 1008.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Easy" type="Button" parent="UI/Menu Buttons/Difficulty Menu/Difficulty"]
modulate = Color( 0.636719, 0.636719, 0.636719, 1 )
margin_right = 576.0
margin_bottom = 103.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.709804, 0.698039, 0.698039, 1 )
enabled_focus_mode = 0
text = "Easy"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Medium" type="Button" parent="UI/Menu Buttons/Difficulty Menu/Difficulty"]
modulate = Color( 0.636719, 0.636719, 0.636719, 1 )
margin_top = 107.0
margin_right = 576.0
margin_bottom = 210.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.709804, 0.698039, 0.698039, 1 )
enabled_focus_mode = 0
text = "Medium"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hard" type="Button" parent="UI/Menu Buttons/Difficulty Menu/Difficulty"]
modulate = Color( 0.636719, 0.636719, 0.636719, 1 )
margin_top = 214.0
margin_right = 576.0
margin_bottom = 317.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.709804, 0.698039, 0.698039, 1 )
enabled_focus_mode = 0
text = "Hard"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="UI/Menu Buttons/Difficulty Menu/Difficulty"]
modulate = Color( 0.636719, 0.636719, 0.636719, 1 )
margin_top = 321.0
margin_right = 576.0
margin_bottom = 424.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.709804, 0.698039, 0.698039, 1 )
enabled_focus_mode = 0
text = "<--"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Node2D" parent="UI/Menu Buttons"]
position = Vector2( -576, 0 )
script = ExtResource( 5 )

[node name="move_tween" type="Tween" parent="UI/Menu Buttons/Settings"]

[node name="SettingsMenu" type="VBoxContainer" parent="UI/Menu Buttons/Settings"]
margin_top = 600.0
margin_right = 576.0
margin_bottom = 935.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="Button" parent="UI/Menu Buttons/Settings/SettingsMenu"]
modulate = Color( 0.636719, 0.636719, 0.636719, 1 )
margin_right = 576.0
margin_bottom = 103.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.709804, 0.698039, 0.698039, 1 )
enabled_focus_mode = 0
text = "Sound"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Brightness" type="Button" parent="UI/Menu Buttons/Settings/SettingsMenu"]
modulate = Color( 0.636719, 0.636719, 0.636719, 1 )
margin_top = 107.0
margin_right = 576.0
margin_bottom = 210.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.709804, 0.698039, 0.698039, 1 )
enabled_focus_mode = 0
text = "Brighness"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="UI/Menu Buttons/Settings/SettingsMenu"]
modulate = Color( 0.636719, 0.636719, 0.636719, 1 )
margin_top = 214.0
margin_right = 576.0
margin_bottom = 317.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.709804, 0.698039, 0.698039, 1 )
enabled_focus_mode = 0
text = "-->"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Emitters" type="Node2D" parent="."]

[node name="Globals" type="Node2D" parent="."]
[connection signal="pressed" from="UI/Menu Buttons/Start/Start Menu/Start" to="UI/Menu Buttons" method="_on_Start_pressed"]
[connection signal="pressed" from="UI/Menu Buttons/Start/Start Menu/Settings" to="UI/Menu Buttons" method="_on_Settings_pressed"]
[connection signal="pressed" from="UI/Menu Buttons/Start/Start Menu/Exit" to="UI/Menu Buttons" method="_on_Exit_pressed"]
[connection signal="pressed" from="UI/Menu Buttons/Difficulty Menu/Difficulty/Back" to="UI/Menu Buttons" method="_on_Back_pressed"]
[connection signal="pressed" from="UI/Menu Buttons/Settings/SettingsMenu/Back" to="UI/Menu Buttons" method="_on_Back_pressed"]
